--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
         "vue-router": "^4.5.1"
     },
     "devDependencies": {
-        "@tailwindcss/postcss": "^4.1.13",
+        "@tailwindcss/vite": "^4.1.13",
+        "@types/node": "^24.5.1",
         "@vitejs/plugin-vue": "^6.0.1",
         "@vue/eslint-config-prettier": "^10.2.0",
         "autoprefixer": "^10.4.21",
@@ -30,7 +31,9 @@
         "eslint-plugin-vue": "^10.4.0",
         "postcss": "^8.5.6",
         "tailwindcss": "^4.1.13",
+        "typescript": "^5.9.2",
         "vite": "^7.1.2",
-        "vue-eslint-parser": "^10.2.0"
+        "vue-eslint-parser": "^10.2.0",
+        "vue-tsc": "^3.0.7"
     }
 }
